# gemory-bank

./: GEMINI.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: issue.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectIntelligence.md  projectbrief.md  roadmap.md  systemPatterns.md  tasks.md  techContext.md
project/: github_project_browser.jsx  index.html
scripts/: dev_ops_mcp_server.py  gemini_orchestrator.py
